Add more options taller

--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -83,11 +83,11 @@
                         >Vehiculos</a>
                     <a
                         class="dropdown-item"
-                        [routerLink]="['/dash/taller/km']"
+                        [routerLink]="['/dash/taller']"
                         >ITV</a>
                     <a
                         class="dropdown-item"
-                        [routerLink]="['/dash/taller/km']"
+                        [routerLink]="['/dash/taller/revision']"
                         >Revisiones</a>                  
                 </div>
             </li>
